--- a/src/Ae.LineCalibrator.Interface/MainWindow.xaml
+++ b/src/Ae.LineCalibrator.Interface/MainWindow.xaml
@@ -13,14 +13,10 @@
       </DockPanel>
       <ProgressBar Height="75" Value="{Binding AudioVolume, Mode=OneWay}" Foreground="{Binding SliderColor}"/>
       <DockPanel>
-        <CheckBox Margin="0,10,10,10" Content="Lock" IsChecked="{Binding IsLocked}" VerticalAlignment="Center"/>
-        <DockPanel>
-          <TextBlock Text="{Binding DeviceVolume}" VerticalAlignment="Center"/>
-          <TextBlock Text="dB" VerticalAlignment="Center"/>
-        </DockPanel>
+		<CheckBox Margin="0,10,10,10" Content="Live Meter" IsChecked="{Binding IsLiveMeterEnabled}" VerticalAlignment="Center"/>
+        <CheckBox Margin="0,10,10,10" Content="{Binding LockAtText}" IsChecked="{Binding IsLocked}" VerticalAlignment="Center"/>
         <Slider Margin="10,10,0,10" Value="{Binding DeviceVolume}" IsEnabled="{Binding IsNotLocked}" Minimum="{Binding DeviceMinVolume}" Maximum="{Binding DeviceMaxVolume}"/>
       </DockPanel>
-      <Button Command="{Binding MeasureClippingCommand}" Content="{Binding MeasureClippingText}"/>
     </StackPanel>
   </ScrollViewer>
 </Window>
